# -ccec-timer-system

./: .cursorrules  .env.example  .gitignore  .project-info  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.agent-coordinator/: context-inject.txt  decisions.jsonl  state.json
.agent-coordinator/hooks/: antigravity.js  claude-code.js  codex.js  cursor.js  gemini-cli.js  hermes.js
.cursor/rules/: agent-coordinator-inject.mdc
.github/workflows/: ci-cd.yml
android/station-kiosk/: README.md  build.gradle.kts  settings.gradle.kts
cpp/plc-collector/: CMakeLists.txt  Dockerfile
cpp/plc-collector/config/: collector.yml
cpp/plc-collector/include/: EventPublisher.hpp  PlcClient.hpp  StationEvent.hpp
cpp/plc-collector/src/: EventPublisher.cpp  PlcClient.cpp  StationEvent.cpp  main.cpp
deploy/edgebox-gate/: ccec-timer-https.conf  ccec-timer.conf
deploy/mosquitto/: mosquitto.conf
deploy/nginx/: ccec-timer.conf
deploy/scripts/: backup-oracle.sh  bootstrap.ps1  bootstrap.sh  logs.sh  prerequisites.sh  print-endpoints.sh  prod-down.sh  prod-logs.sh  prod-up.sh  restore-oracle.sh  stop.sh  (+4 more)
docs/: architecture.md  deployment-and-operations-overview-bid.md  deployment-and-operations-overview-implementation.md  deployment-and-operations-overview.md  deployment.md  production-deployment.md  run-and-deploy.md  technical-solution.md  执行清单.md  重庆康明斯工位倒计时系统_商务报价书_V8_3_修订版.docx  重庆康明斯工位倒计时系统_技术方案_V8_3_终稿版.docx  重庆康明斯工位倒计时系统_概要设计_原型设计_详细设计_V1.0.docx  重庆康明斯工位倒计时系统_概要设计_原型设计_详细设计_V1.1.docx
skills/: 代码审查.md  写博客.md  客户回复.md
(+102 files in other folders)
